# holodeck

./: Cargo.toml  README  build.rs
src/: application.rs  buffer.rs  cube.rs  cube.vert  main.rs  paralellogram.vert  program.rs  quad.rs  shader.rs  text.rs  texture.rs  triangle.vert  triangle2.frag  triangle_uniform.frag  uniform.rs  vertex.rs
