[package]
name = "rust-opengl"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw-sys = "3.3.5"
glfw = "*"
stb_image = "0.2.4"
glam = "0.22.0"
freetype = "0.7.0"

[build-dependencies]
gl_generator = "0.14.0"

